remove unused modules

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -52,15 +52,15 @@ block scripts-dependencies
 block scripts-app
   script(src='/app/services/projects.js')
   script(src='/app/services/skills.js')
-  script(src='/app/directives/home.js')
+
   script(src='/app/directives/projects.js')
-  script(src='/app/directives/project.js')
   script(src='/app/directives/skills.js')
   script(src='/app/directives/skill.js')
+  script(src='/app/directives/about.js')
+
   script(src='/app/routes/projects.js')
-  script(src='/app/routes/project.js')
   script(src='/app/routes/skills.js')
   script(src='/app/routes/skill.js')
-  script(src='/app/routes/home.js')
   script(src='/app/routes/about.js')
+
   script(src='/app/index.js')
