--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -10,6 +10,8 @@ block meta
 title Francois - Freelance
 
 block links
+  link(rel='icon', type='image/png' href='/images/face-icon.png')
+  link(rel='env', content=env)
 
 block stylesheets
   link(rel='stylesheet', href='/dev/bower_components/foundation/css/normalize.css')
