--- a/views/partials/skill.jade
+++ b/views/partials/skill.jade
@@ -1,7 +1,11 @@
-h2(ng-bind='skill')
-h3 Projects where I have used 
-  span(ng-bind='skill')
-  | :
-ul
-  li(ng-repeat='proj in projectsUsingSkill')
-    a(ng-href='#/projects/{{proj.slug}}', ng-bind='proj.name')
+div(ng-show='skill')
+  h2(ng-bind='skill')
+  h3 Projects where I have used 
+    span(ng-bind='skill')
+    | :
+  ul
+    li(ng-repeat='proj in projectsUsingSkill')
+      a(ng-href='#/projects/{{proj.slug}}', ng-bind='proj.name')
+
+div(ng-hide='skill')
+  h2 Skill not found
