--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -20,15 +20,15 @@
           strong M
           span ongoDB
         li
-          a(href)
+          a(href='#/skills/Express')
             strong E
             span xpress
         li
-          a(href)
+          a(href='#/skills/Angular')
             strong A
             span ngular
         li
-          a(href)
+          a(href='#/skills/NodeJS')
             strong N
             span odeJS
       
