--- a/public/stylesheets/francois-freelance.scss
+++ b/public/stylesheets/francois-freelance.scss
@@ -10,6 +10,7 @@ img.preview {
   border-radius: 6px;
   box-shadow: -2px 10px 15px rgba(0, 0, 0, .5);
   min-height: 482px;
+  min-width: 320px;
   margin: 4px auto 32px auto;
   display: block;
   cursor: pointer
